2014-08-07  Paul Eggert  <eggert@cs.ucla.edu>

	* xterm.c (x_delete_terminal): Plug file descriptor leak (Bug#17691).

2014-08-07  Reuben Thomas  <rrt@sc3d.org>

	Refer to MS-DOS using the same name everywhere.

	* editfns.c: Fix a couple of ``MS-DOG''s missed in the previous
	commit.
	* xfaces.c: ditto.

2014-08-05  Martin Rudalics  <rudalics@gmx.at>

	* w32term.c (w32_redeem_scroll_bar):
	* xterm.c (XTredeem_scroll_bar): Revert part of last change by
	not redeeming scroll bars that have been turned off.

2014-08-05 Dmitry Antipov  <dmantipov@yandex.ru>

	* keyboard.c (safe_run_hooks): Follow the convenient style to bind
	inhibit-quit to t and pass 2 args to safe_run_hook_funcall.  See
	<http://lists.gnu.org/archive/html/emacs-devel/2014-08/msg00077.html>.
	(safe_run_hook_funcall): Adjust accordingly.

2014-08-04  Martin Rudalics  <rudalics@gmx.at>

	* frame.h (FRAME_HAS_HORIZONTAL_SCROLL_BARS): Condition
	correctly according to toolkit used.
	* frame.c (make_initial_frame, make_terminal_frame)
	(x_set_horizontal_scroll_bars, x_set_scroll_bar_height)
	(Vdefault_frame_horizontal_scroll_bars): Correctly condition
	assignments according to presence of toolkit scrollbars.
	* window.h (WINDOW_HAS_HORIZONTAL_SCROLL_BAR): Condition
	correctly according to toolkit used.
	* window.c (set_window_scroll_bars): Set horizontal scroll bar
	only if toolkit supports it.
	* w32term.c (w32_redeem_scroll_bar): Always redeem scroll bar if
	present.
	* xterm.c (x_scroll_bar_create): Initialize horizontal slot for
	non-toolkit builds.
	(XTredeem_scroll_bar): Always redeem scroll bar if present.

2014-08-04 Dmitry Antipov  <dmantipov@yandex.ru>

	* keyboard.c (safe_run_hook_funcall): Avoid consing around
	Vinhibit_quit and prefer internal_condition_case_n to pass args.
	(safe_run_hooks_error, safe_run_hooks_1): Adjust accordingly.
	(safe_run_hooks): Remove comment which is not relevant any more.

2014-08-03  Paul Eggert  <eggert@cs.ucla.edu>

	Don't let big frames overrun the stack.